--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.project">
+    package="com.example.project" >
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".buscarUsuario"
+            android:exported="false"
+            android:label="@string/title_activity_buscar_usuario"
+            android:theme="@style/Theme.Project.NoActionBar" />
+        <activity
+            android:name=".empresasAliadas"
+            android:exported="false" />
         <activity
             android:name=".Iniciar_sesion"
             android:exported="false" />
@@ -20,8 +28,8 @@
             android:name=".registrar"
             android:exported="false" />
         <activity
-            android:name="Login"
-            android:exported="true">
+            android:name=".Login"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
