Cambiar nombres de archivos y actividades segun los estandares

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,51 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC9_DIPHlXvT_2ft5Q2-YvsI7XIv5gZdi8" />
+
         <activity
-            android:name=".Activity_Organizacion"
+            android:name=".MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".OrganizacionActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity_Donador"
+            android:name=".DonadorActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity_Empresa"
+            android:name=".EmpresaActivity"
             android:exported="false" />
         <activity
-            android:name=".buscarUsuario"
+            android:name=".BuscarUsuarioActivity"
             android:exported="false"
             android:label="@string/title_activity_buscar_usuario"
             android:theme="@style/Theme.Project.NoActionBar" />
         <activity
-            android:name=".empresasAliadas"
+            android:name=".EmpresasAliadasActivity"
             android:exported="false" />
         <activity
-            android:name=".Iniciar_sesion"
+            android:name=".IniciarSesionActivity"
             android:exported="false" />
         <activity
-            android:name=".registrar"
+            android:name=".RegistrarActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
