--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
-
+        <activity
+            android:name=".buscar_usuario"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
