--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
-        <activity
-            android:name=".buscar_usuario"
-            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
-
              To get one, follow the directions here:
-
                 https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
              Once you have your API key (it starts with "AIza"), define a new property in your
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
@@ -38,21 +32,21 @@
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".OrganizacionActivity"
+            android:name=".Activity_Organizacion"
             android:exported="false" />
         <activity
-            android:name=".DonadorActivity"
+            android:name=".Activity_Donador"
             android:exported="false" />
         <activity
-            android:name=".EmpresaActivity"
+            android:name=".Activity_Empresa"
             android:exported="false" />
         <activity
-            android:name=".BuscarUsuarioActivity"
+            android:name=".Buscar_Usuario"
             android:exported="false"
             android:label="@string/title_activity_buscar_usuario"
             android:theme="@style/Theme.Project.NoActionBar" />
         <activity
-            android:name=".EmpresasAliadasActivity"
+            android:name=".EmpresasAliadas"
             android:exported="false" />
         <activity
             android:name=".IniciarSesionActivity"
