--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.project">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Productos"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
