--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyCDVVm03yXuhCmvQxsW166VsDm1vd2RRR0" />
 
         <activity
             android:name=".PuntoRecoleccionActivity"
