--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".Donacion"
+            android:exported="false" />
+        <activity
+            android:name=".Donacion"
+            android:exported="false" />
+        <activity
             android:name=".ForgottenPassword"
             android:exported="false" />
         <activity
