La org ya puede editar eventos poniendo el ID del evento y luego la nueva direccion y fecha

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
-            android:name=".Donacion"
-            android:exported="false" />
-        <activity
-            android:name=".Donacion"
+            android:name=".BorrarEventoOrg"
             android:exported="false" />
         <activity
             android:name=".ForgottenPassword"
