se agrego el EditarEventoORG al manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
             android:name=".Evento_ORG"
             android:exported="false" />
         <activity
+            android:name=".EditarEventoOrg"
+            android:exported="false" />
+        <activity
             android:name=".Evento_Usuario"
             android:exported="false" />
         <activity
